--- a/src/app.css
+++ b/src/app.css
@@ -6,19 +6,19 @@ h1 {
 }
 
 h2 {
-  font-family: "sirenia", sans-serif;
+  font-family: 'sirenia', sans-serif;
   font-size: 28pt;
   font-weight: bold;
 }
 
 h3 {
-  font-family: "sirenia", sans-serif;
+  font-family: 'sirenia', sans-serif;
   font-size: 23pt;
   font-weight: bolder;
 }
 
 p {
-  font-family: "sirenia", sans-serif;
+  font-family: 'sirenia', sans-serif;
   font-size: 16pt;
   font-weight: normal;
   line-height: 22pt;
