--- a/src/app.css
+++ b/src/app.css
@@ -1,25 +1,25 @@
 h1 {
-  font-family: "sirenia", sans-serif;
+  font-family: 'sirenia', sans-serif;
   font-size: 43pt;
   font-weight: bolder;
   color: #505050;
 }
 
 h2 {
-  font-family: sans-serif;
+  font-family: 'sirenia', sans-serif;
   font-size: 28pt;
   font-weight: bold;
 }
 
 h3 {
-  font-family: Garamond;
+  font-family: 'sirenia', sans-serif;
   font-size: 23pt;
   font-weight: bolder;
 }
 
 p {
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font: 16pt Cambria;
+  font-family: 'sirenia', sans-serif;
+  font-size: 16pt;
   font-weight: normal;
   line-height: 22pt;
   color: #505050;
@@ -39,4 +39,26 @@ button {
   height: 4vh;
   background-color: #505050;
   color: white;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+@keyframes fade-in-out {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0.3;
+  }
+}
+
+.fade-in-out {
+  animation: 1.5s alternate forwards infinite fade-in-out;
 }
