--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,24 @@
+:root {
+  --white: white;
+
+  --dark-gray: #2d2d2d;
+  --gray: #505050;
+  --light-gray: #232323;
+
+  --accent-blue: #5273b0;
+  --accent-red: #cf6348;
+  --accent-yellow: #e5b257;
+
+  --light-blue: #c5dcee;
+  --light-red: #eec3b8;
+  --light-yellow: #f6e0b1;
+}
+
 h1 {
   font-family: 'sirenia', sans-serif;
   font-size: 43pt;
   font-weight: bolder;
-  color: #505050;
+  color: var(--gray);
 }
 
 h2 {
@@ -22,7 +38,7 @@ p {
   font-size: 16pt;
   font-weight: normal;
   line-height: 22pt;
-  color: #505050;
+  color: var(--gray);
   text-align: center;
 }
 p2 {
@@ -30,7 +46,7 @@ p2 {
   font-size: 16pt;
   font-weight: normal;
   line-height: 22pt;
-  color: #505050;
+  color: var(--gray);
   display: flex;
   justify-content: space-between;
   text-align: left;
@@ -41,7 +57,7 @@ p3 {
   font-size: 16pt;
   font-weight: normal;
   line-height: 22pt;
-  color: #505050;
+  color: var(--gray);
   display: flex;
   justify-content: space-between;
   text-align: right;
@@ -50,40 +66,60 @@ p3 {
 body {
   font: 16pt rubik;
   text-align: left;
-  color: #505050;
+  color: var(--gray);
+}
+
+a {
+  font-family: 'sirenia', sans-serif;
+  color: var(--gray);
+  transition: color 150ms ease;
+}
+
+a:hover {
+  color: var(--dark-gray);
 }
 
 .button {
-  margin: auto;
   border-radius: 16px;
   width: 30vw;
   height: 4vh;
-  background-color: #505050;
-  color: white;
+
+  /* Color and font */
+  background-color: var(--gray);
+  color: var(--white);
   font: 12pt 'sirenia';
+  text-decoration: none;
+
+  /* Alignment */
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   position: relative;
+  transition: all 150ms ease;
 }
 
 .button:hover {
-  background-color: #505050;
-  color: white
+  background-color: var(--dark-gray);
+  color: var(--white);
+
+  cursor: pointer;
 }
 
 .button:active {
-  background-color: #2d2d2d;
-  color: white;
-  transform: translateY(4px);
+  background-color: var(--dark-gray);
+  box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.25);
 }
 
 .button:disabled {
-  background-color: #232323;
-  color: white;
+  background-color: var(--light-gray);
   opacity: 0.6;
   cursor: not-allowed;
 }
 
 .button2 {
-  background-color: #2d2d2d;
+  background-color: var(--dark-gray);
   color: black;
 }
 
@@ -93,15 +129,15 @@ body {
   border-radius: 16px;
   width: 80vw;
   height: 6vh;
-  background-color: #505050;
-  color: white;
+  background-color: var(--gray);
+  color: var(--white);
 }
 
 .button4 {
-  background-color: white;
-  color: #505050;
-  border-color: #505050;
-  box-shadow: 5px 5px 10px 2px #505050;
+  background-color: var(--white);
+  color: var(--gray);
+  border-color: var(--gray);
+  box-shadow: 5px 5px 10px 2px var(--gray);
   cursor: not-allowed;
   transform: none;
   width: 16vw;
