Disable teacher and nurse occupations

--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,7 @@
 
   --dark-gray: #2d2d2d;
   --gray: #505050;
-  --light-gray: #232323;
+  --light-gray: rgba(35, 35, 35, 0.12);
 
   --accent-blue: #5273b0;
   --accent-red: #cf6348;
@@ -122,6 +122,7 @@ a:hover {
 
 .button:disabled {
   background-color: var(--light-gray);
+  color: rgba(35, 35, 35, 0.5);
   opacity: 0.6;
   cursor: not-allowed;
 }
