--- a/src/app.css
+++ b/src/app.css
@@ -19,21 +19,27 @@
 
 h1 {
   font-family: var(--font-sirenia);
-  font-size: 43pt;
+  font-size: 30pt;
   font-weight: bolder;
   color: var(--gray);
+  text-align: center;
 }
 
 h2 {
   font-family: var(--font-sirenia);
-  font-size: 28pt;
+  font-size: 15pt;
   font-weight: bold;
+  color: var(--gray);
 }
 
 h3 {
   font-family: var(--font-sirenia);
-  font-size: 23pt;
-  font-weight: bolder;
+  font-size: 21pt;
+  line-height: 24pt;
+  font-weight: 500;
+  margin-top: 1.5rem;
+  margin-bottom: .5rem;
+  color: var(--gray);
 }
 
 h6 {
@@ -45,7 +51,7 @@ h6 {
 
 p {
   font-family: var(--font-sirenia);
-  font-size: 16pt;
+  font-size: 14pt;
   font-weight: normal;
   line-height: 22pt;
   color: var(--gray);
@@ -53,7 +59,7 @@ p {
 
 p2 {
   font-family: var(--font-sirenia);
-  font-size: 16pt;
+  font-size: 15pt;
   font-weight: normal;
   line-height: 22pt;
   color: var(--gray);
@@ -76,7 +82,7 @@ p3 {
 
 p4 {
   font-family: var(--font-rubik);
-  font-size: 10.5pt;
+  font-size: 7.5pt;
   font-weight: normal;
   line-height: 18px;
   /* display: flex; */
@@ -118,6 +124,7 @@ a:hover {
 
   /* Color */
   background-color: var(--gray);
+  border: 0;
 
   /* Font */
   color: var(--white);
