--- a/src/app.css
+++ b/src/app.css
@@ -34,12 +34,27 @@ h2 {
 
 h3 {
   font-family: var(--font-sirenia);
-  font-size: 15pt;
-  line-height: 18pt;
+  font-size: 17pt;
+  line-height: 19pt;
   font-weight: 700;
   margin-top: 1.5rem;
   margin-bottom: .5rem;
+  text-align: center;
   color: var(--gray);
+  width: 200px;
+  word-wrap: break-word;
+}
+
+h4 {
+  font-family: var(--font-sirenia);
+  font-size: 21pt;
+  line-height: 24pt;
+  font-weight: 500;
+  margin-top: 1.5rem;
+  margin-bottom: .5rem;
+  color: var(--gray);
+  width: 200px;
+  word-wrap: break-word;
 }
 
 h6 {
@@ -55,6 +70,7 @@ p {
   font-weight: normal;
   line-height: 17pt;
   color: var(--gray);
+
 }
 
 p2 {
