--- a/src/app.css
+++ b/src/app.css
@@ -23,6 +23,8 @@ h1 {
   font-weight: bolder;
   color: var(--gray);
   text-align: center;
+  width: 370px;
+  word-wrap: break-word;
 }
 
 h2 {
@@ -53,7 +55,7 @@ h4 {
   margin-top: 1.5rem;
   margin-bottom: .5rem;
   color: var(--gray);
-  width: 200px;
+  width: 280px;
   word-wrap: break-word;
 }
 
