Text and Div Styling

--- a/src/app.css
+++ b/src/app.css
@@ -23,7 +23,7 @@ h1 {
   font-weight: bolder;
   color: var(--gray);
   text-align: center;
-  width: 370px;
+  width: 82vw;
   word-wrap: break-word;
 }
 
@@ -43,7 +43,7 @@ h3 {
   margin-bottom: .5rem;
   text-align: center;
   color: var(--gray);
-  width: 200px;
+  width: 70%;
   word-wrap: break-word;
 }
 
@@ -100,9 +100,10 @@ p3 {
 
 p4 {
   font-family: var(--font-rubik);
-  font-size: 7.5pt;
+  font-size: 9pt;
   font-weight: normal;
   line-height: 18px;
+  color: var(--gray);
   /* display: flex; */
   /* justify-content: space-between; */
   /* text-align: right; */
@@ -112,6 +113,7 @@ body {
   font: 16pt rubik;
   color: var(--gray);
   user-select: none;
+  margin: 0;
 }
 
 body2 {
