Overhaul background and intro animation

--- a/src/app.css
+++ b/src/app.css
@@ -235,3 +235,10 @@ li {
 .accent-green {
   color: var(--accent-green);
 }
+
+.centered-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
