--- a/src/app.css
+++ b/src/app.css
@@ -19,25 +19,12 @@
 }
 
 * {
-  scrollbar-color: rgba(0, 0, 0, 0.2) rgba(0, 0, 0, 0.1);
-  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+  scrollbar-width: none;
 }
 
 *::-webkit-scrollbar {
-  width: 5px;
-}
-
-*::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0.1);
-}
-
-*::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
-}
-
-*::-webkit-scrollbar-thumb:hover {
-  background: rgba(0, 0, 0, 0.5);
+  display: none;
 }
 
 h1 {
@@ -62,7 +49,7 @@ h3 {
   line-height: 19pt;
   font-weight: 700;
   margin-top: 1.5rem;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   text-align: center;
   color: var(--gray);
   width: 70%;
@@ -75,7 +62,7 @@ h4 {
   line-height: 24pt;
   font-weight: 500;
   margin-top: 1.5rem;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   color: var(--gray);
   width: 280px;
   word-wrap: break-word;
@@ -94,7 +81,6 @@ p {
   font-weight: normal;
   line-height: 17pt;
   color: var(--gray);
-
 }
 
 p2 {
@@ -262,4 +248,8 @@ li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.constrained {
+  max-width: min(100vw, 750px);
 }
