--- a/src/app.css
+++ b/src/app.css
@@ -122,13 +122,11 @@ body {
   color: var(--gray);
   user-select: none;
   margin: 0;
+  overscroll-behavior: none;
 }
 
-body2 {
-  font-family: var(--font-rubik);
-  font-size: 16pt;
-  font-weight: normal;
-  line-height: 22pt;
+html {
+  overscroll-behavior: none;
 }
 
 a {
