--- a/src/app.css
+++ b/src/app.css
@@ -9,6 +9,8 @@
   --accent-red: #cf6348;
   --accent-yellow: #e5b257;
   --accent-green: #7ba522;
+  --accent-purple: #94439D;
+  --accent-pink: #E7AB9C;
 
   --light-blue: #c5dcee;
   --light-red: #eec3b8;
