--- a/src/app.css
+++ b/src/app.css
@@ -5,6 +5,7 @@
   --gray: #505050;
   --light-gray: rgba(35, 35, 35, 0.12);
 
+  --accent-gray: #2d2d2d;
   --accent-blue: #5273b0;
   --accent-red: #cf6348;
   --accent-yellow: #e5b257;
