Add underlines to learn mores

--- a/src/app.css
+++ b/src/app.css
@@ -10,8 +10,8 @@
   --accent-red: #cf6348;
   --accent-yellow: #e5b257;
   --accent-green: #7ba522;
-  --accent-purple: #94439D;
-  --accent-pink: #E7AB9C;
+  --accent-purple: #94439d;
+  --accent-pink: #e7ab9c;
 
   --light-blue: #c5dcee;
   --light-red: #eec3b8;
